--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -31,7 +31,7 @@
     
     padding: 1rem 3rem;
     text-align: center;
-    margin-top: ($separacion \ 2); 
+    margin-top: calc($separacion / 2); 
     display: $display; 
     border: none;
  
