Fin de conexión con la base de datos operaciones CRUD

--- a/src/scss/base/_botones.scss
+++ b/src/scss/base/_botones.scss
@@ -13,6 +13,11 @@
 }
 
 
-.boton-rojo{
-    @include boton($rojoOscuro, inline-block);
+.boton-rojo-block{
+    @include boton($rojoOscuro, block);
+    width: 100%;
+}
+
+.boton-verde-block{
+    @include boton($verde, block);
 }
